Add new verison

--- a/Sagua.Datatable.Example/Sagua.Datatable.Example.csproj
+++ b/Sagua.Datatable.Example/Sagua.Datatable.Example.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sagua.Datatable\Sagua.Datatable.csproj" />
+    <ProjectReference Include="..\Sagua.Table\Sagua.Table.csproj" />
   </ItemGroup>
 
 </Project>
